force-app/main/default/objects/Position_Qualification__c/Position_Qualification__c.object-meta.xml
<CustomObject>
    <label>Position Qualification</label>
    <nameField>
        <displayFormat>PQ-{0000000}</displayFormat>
        <label>Position Qualification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position Qualifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>