force-app/main/default/objects/Position_Qualification__c/fields/Characteristic__c.field-meta.xml
<CustomField>
    <fullName>Characteristic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Characteristic</label>
    <referenceTo>Characteristic__c</referenceTo>
    <relationshipLabel>Position Qualifications</relationshipLabel>
    <relationshipName>Position_Qualifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>