force-app/main/default/objects/Position_Qualification__c/fields/Position_Level__c.field-meta.xml
<CustomField>
    <fullName>Position_Level__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Position Level</label>
    <referenceTo>Position_Level__c</referenceTo>
    <relationshipLabel>Position Qualifications</relationshipLabel>
    <relationshipName>Position_Qualifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>